--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
         go-version: '1.25'
 
     - name: Run Rests and Create coverage report
-      run: go test -coverprofile=coverage.txt
+      run: go test ./... -coverprofile=coverage.txt
 
     - name: Upload results to Codecov
       uses: codecov/codecov-action@v5
