Add step to list files in GitHub Actions workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,6 +38,8 @@ jobs:
         }
         Write-Host "coverage.txt criado e contém dados."
 
+    - name: List files
+      run: dir
 
     - name: Upload results to Codecov
       uses: codecov/codecov-action@v5
