--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
         go-version: '1.25'
 
     - name: Run Rests and Create coverage report
-      run: go test ./... -coverprofile=coverage.txt -covermode=atomic
+      run: go test ./... -coverprofile="coverage.txt" -covermode=atomic
     
 
     - name: Check coverage file
